--- a/src/mldec/hyper_config/cnn_toyproblem_only_good.yaml
+++ b/src/mldec/hyper_config/cnn_toyproblem_only_good.yaml
@@ -5,7 +5,8 @@ hyperparameters:
   dropout: [0.05]
   n_layers: [1, 2, 3, 4, 5, 6]
 
-hyper_settings:
+settings:
   total_cpus: 1
+  total_gpus: 0
   num_samples: 2
 
