--- a/src/mldec/hyper_config/cnn_toyproblem_only_good.yaml
+++ b/src/mldec/hyper_config/cnn_toyproblem_only_good.yaml
@@ -1,12 +1,18 @@
 model_type: cnn
 hyperparameters:
-  lr: [0.001, 0.002, 0.004, 0.006, 0.01, 0.014, 0.022, 0.034, 0.051, 0.078]
-  conv_channels: [2, 4, 6, 8]
-  dropout: [0.05]
-  n_layers: [1, 2, 3, 4, 5, 6]
+  lr: [0.0001, 0.0005, 0.001, 0.002, 0.006, 0.01, 0.022, 0.04, 0.06]
+  conv_channels: [8, 16, 24, 32]
+  dropout: [0.05, 0.1, 0.15]
+  n_layers: [2, 3, 4, 5, 6]
+  kernel_size: [2, 3, 4]
+  batch_size: [50, 100, 200, 300, 500]
+
+knob_settings:
+  p: [0.1, 0.15, 0.2]
 
 settings:
-  total_cpus: 1
+  total_cpus: 100
+  num_samples: 300
   total_gpus: 0
-  num_samples: 2
+
 
