--- a/src/mldec/hyper_config/transformer_toyproblem_only_good.yaml
+++ b/src/mldec/hyper_config/transformer_toyproblem_only_good.yaml
@@ -1,13 +1,13 @@
 model_type: transformer
 hyperparameters:
-  lr: [0.0001, 0.0005, 0.001, 0.002, 0.006, 0.01, 0.022, 0.04]
+  lr: [0.0001, 0.0005, 0.001, 0.002, 0.006]
   d_model: [8, 12, 16]
-  dropout: [0.05, 0.1, 0.15]
+  dropout: [0.1, 0.15]
   num_encoder_layers: [1, 2, 3]
-  num_decoder_layers: [1, 2]
+  num_decoder_layers: [1]
   nhead: [2, 4]
   dim_feedforward: [4, 8, 16]
-  batch_size: [50, 100, 200, 300, 500]
+  batch_size: [256]
 
 knob_settings:
   p: [0.1, 0.15, 0.2]
