--- a/src/mldec/hyper_config/transformer_toyproblem.yaml
+++ b/src/mldec/hyper_config/transformer_toyproblem.yaml
@@ -7,13 +7,13 @@ hyperparameters:
   num_decoder_layers: [1]
   nhead: [2, 4]
   dim_feedforward: [4, 8, 16]
-  batch_size: [100, 250]
+  batch_size: [250]
 
 knob_settings:
-  p: [0.1, 0.45]
+  p: [0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, .5]
 
 settings:
   total_cpus: 100
-  num_samples: 100
+  num_samples: 1350
   total_gpus: 0
 
