--- a/src/mldec/hyper_config/cnn_toyproblem.yaml
+++ b/src/mldec/hyper_config/cnn_toyproblem.yaml
@@ -2,7 +2,7 @@ model_type: cnn
 hyperparameters:
   lr: [0.00001, 0.00005, 0.0001, 0.0005, 0.001, 0.002]
   conv_channels: [16, 24, 32]
-  dropout: [0.1, 0.15]
+  dropout: [0.05, 0.1, 0.15]
   n_layers: [3, 4, 5, 6]
   kernel_size: [3, 4]
   batch_size: [100]
