--- a/src/mldec/hyper_config/gnn_reps_toric_code.yaml
+++ b/src/mldec/hyper_config/gnn_reps_toric_code.yaml
@@ -1,14 +1,15 @@
 model_type: gnn
 hyperparameters:
-  lr: [0.001, 0.002, 0.003, 0.004, 0.005]
-  batch_size: [128, 256]
+  lr: [0.0001, 0.0002, 0.0003]
+  batch_size: [512, 1024]
   gcn_depth: [5, 6, 7]
   gcn_min: [32, 64]
   mlp_depth: [3, 4]
   mlp_max: [128, 256]
+  n_train: [131072, 262144, 524288, 1048576]
 
 knob_settings:
-  beta: [1]
+  beta: [1, 2]
 
 settings:
   total_cpus: 100
