--- a/src/mldec/hyper_config/gnn_reps_toric_code.yaml
+++ b/src/mldec/hyper_config/gnn_reps_toric_code.yaml
@@ -6,12 +6,12 @@ hyperparameters:
   gcn_min: [32, 64]
   mlp_depth: [3, 4]
   mlp_max: [128, 256]
-  n_train: [131072, 262144, 524288, 1048576]
+  n_train: [10000]
 
 knob_settings:
   beta: [1, 2]
 
 settings:
-  total_cpus: 100
-  num_samples: 200
+  total_cpus: 2
+  num_samples: 2
   total_gpus: 0
