--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@ __pycache__/
 theory/
 *.pt 
 src/mldec/pipelines/tune_results
+src/mldec/pipelines/train_results
 src/mldec/tune_results
 src/mldec/pipelines/temp
+.venv
