--- a/src/mldec/hyper_config/gnn_reps_toric_code.yaml
+++ b/src/mldec/hyper_config/gnn_reps_toric_code.yaml
@@ -9,9 +9,9 @@ hyperparameters:
   n_train: [1048576]
 
 knob_settings:
-  beta: [4, 5, 6, 7]
+  beta: [14, 15, 16, 17, 18]
 
 settings:
-  total_cpus: 60
-  num_samples: 60
+  total_cpus: 75
+  num_samples: 75
   total_gpus: 0
