almost running gnn on ibm data

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ streamlit==1.32.0
 pandas==2.1.0
 matplotlib==3.7.2
 seaborn==0.12.2
+qiskit-aer
+qiskit[visualization]
+qiskit-ibm-runtime
+git+https://github.com/NCCR-SPIN/topological_codes.git
