--- a/src/mldec/hyper_config/gnn_reps_exp_rep_code.yaml
+++ b/src/mldec/hyper_config/gnn_reps_exp_rep_code.yaml
@@ -1,17 +1,17 @@
 model_type: gnn
 hyperparameters:
-  lr: [ 0.0002, 0.0003, 0.0004, 0.001, 0.003, 0.008, 0.012, 0.015]
+  lr: [0.01, 0.015, .02, .025, .03]
   batch_size: [128, 256]
   gcn_depth: [2, 3, 4]
   gcn_min: [32, 64]
   mlp_depth: [3, 4]
   mlp_max: [128]
-  # n_train: [2048]
+  n_train: [512, 1024, 2048, 4096, 8192, 16192, 32384]
 
 knob_settings:
-  beta: [1, 2, 5, 10]
+  beta: [1, 1.1, 1.2, 1.3, 1.4, 2, 3, 4, 5]
 
 settings:
-  total_cpus: 2
-  num_samples: 2
+  total_cpus: 100
+  num_samples: 1800
   total_gpus: 0
