--- a/src/mldec/hyper_config/transformer_fivequbit_code_only_good.yaml
+++ b/src/mldec/hyper_config/transformer_fivequbit_code_only_good.yaml
@@ -2,9 +2,9 @@ model_type: transformer
 hyperparameters:
   lr: [0.0001, 0.0003, 0.0005, 0.0007, 0.001, 0.002, .003, .004, 0.005]
   d_model: [8, 12, 16]
-  dropout: [0.1, 0.15]
+  dropout: [0.05, 0.1, 0.15]
   num_encoder_layers: [1, 2, 3]
-  num_decoder_layers: [1, 2]
+  num_decoder_layers: [1]
   nhead: [2, 4]
   dim_feedforward: [4, 8, 16]
   # batch_size: [256]
